--- a/.github/workflows/prchecker.yml
+++ b/.github/workflows/prchecker.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+env:
+  JAVA_VERSION: "12.x"
+  FLUTTER_CHANNEL: "stable"
+  PROPERTIES_PATH: "./android/key.properties"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,7 +20,8 @@ jobs:
       # Setup Java environment in order to build the Android app.
       - uses: actions/setup-java@v1
         with:
-          java-version: "12.x"
+          java-version: ${{env.JAVA_VERSION}}
+          cache: "gradle"
 
       # Gradle cache for faster builds
       - uses: actions/cache@v2
@@ -26,10 +32,19 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+
       # Setup the flutter environment.
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          channel: ${{env.FLUTTER_CHANNEL}}
+          cache: true
+
+      - run: |
+          echo storePassword=\${{ secrets.STORE_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
+          echo keyPassword=\${{ secrets.KEY_PASSWORD }} > ${{env.PROPERTIES_PATH}}
+          echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}
+          echo storeFile=\${{ secrets.STORE_FILE }} >> ${{env.PROPERTIES_PATH}}
+          echo "${{ secrets.KEYSTORE }}" | base64 --decode > \${{ secrets.STORE_FILE }}
 
       # Get flutter dependencies.
       - run: flutter pub get
