--- a/.github/workflows/prchecker.yml
+++ b/.github/workflows/prchecker.yml
@@ -43,8 +43,8 @@ jobs:
           echo storePassword=\${{ secrets.STORE_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
           echo keyPassword=\${{ secrets.KEY_PASSWORD }} > ${{env.PROPERTIES_PATH}}
           echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}
-          echo storeFile=\${{ secrets.STORE_FILE }} >> ${{env.PROPERTIES_PATH}}
-          echo "${{ secrets.KEYSTORE }}" | base64 --decode > \${{ secrets.STORE_FILE }}
+          echo storeFile=/home/runner/work/BlackHole/BlackHole/android/app/keystore.jks >> ${{env.PROPERTIES_PATH}}
+          echo "${{ secrets.KEYSTORE }}" | base64 --decode > /home/runner/work/BlackHole/BlackHole/android/app/keystore.jks
 
       # Get flutter dependencies.
       - run: flutter pub get
