--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -40,9 +40,9 @@ jobs:
           cache: true
       
       - run: |
-          echo storePassword=\${{ secrets.STORE_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
-          echo keyPassword=\${{ secrets.KEY_PASSWORD }} > ${{env.PROPERTIES_PATH}}
-          echo keyAlias=\${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}
+          echo storePassword=${{ secrets.STORE_PASSWORD }} >> ${{env.PROPERTIES_PATH}}
+          echo keyPassword=${{ secrets.KEY_PASSWORD }} > ${{env.PROPERTIES_PATH}}
+          echo keyAlias=${{ secrets.KEY_ALIAS }} >> ${{env.PROPERTIES_PATH}}
           echo storeFile=/home/runner/work/BlackHole/BlackHole/android/app/keystore.jks >> ${{env.PROPERTIES_PATH}}
           echo "${{ secrets.KEYSTORE }}" | base64 --decode > /home/runner/work/BlackHole/BlackHole/android/app/keystore.jks
 
