--- a/.github/workflows/prchecker.yml
+++ b/.github/workflows/prchecker.yml
@@ -59,10 +59,15 @@ jobs:
       # - run: flutter test
 
       # Build apk.
-      - run: flutter build apk --release
+      - run: flutter build apk --release --split-per-abi
 
       # Upload generated apk to the artifacts.
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v2
         with:
-          name: app-release.apk
-          path: build/app/outputs/apk/release/app-release.apk
+          name: app-arm64-v8a-release.apk
+          path: build/app/outputs/apk/release/app-arm64-v8a-release.apk
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: app-armeabi-v7a-release.apk
+          path: build/app/outputs/apk/release/app-armeabi-v7a-release.apk
