--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -82,3 +82,4 @@ jobs:
           message: |
             New commit pushed to [${{ github.event.repository.name }}](${{ github.event.repository.html_url }}) by [${{ github.event.head_commit.author.name }}](${{ github.event.head_commit.author.html_url }}).
             Commit message: ${{ github.event.head_commit.message }}
+          document: build/app/outputs/apk/release/app-arm64-v8a-release.apk
