--- a/.github/workflows/prchecker.yml
+++ b/.github/workflows/prchecker.yml
@@ -59,15 +59,22 @@ jobs:
       # - run: flutter test
 
       # Build apk.
-      - run: flutter build apk --release --split-per-abi
+      - run: flutter build apk --debug --split-per-abi
 
       # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v2
         with:
-          name: app-arm64-v8a-release.apk
-          path: build/app/outputs/apk/release/app-arm64-v8a-release.apk
+          name: app-arm64-v8a-debug.apk
+          path: build/app/outputs/apk/release/app-arm64-v8a-debug.apk
 
-      - uses: actions/upload-artifact@v2
+      - name: Commit on Telegram
+        uses: appleboy/telegram-action@master
         with:
-          name: app-armeabi-v7a-release.apk
-          path: build/app/outputs/apk/release/app-armeabi-v7a-release.apk
+          to: ${{ secrets.TELEGRAM_USER_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          format: markdown
+          disable_web_page_preview: true
+          message: |
+            New PR raised to [${{ github.event.repository.name }}](${{ github.event.repository.html_url }}) by [${{ github.event.head_commit.author.name }}](${{ github.event.head_commit.author.html_url }}).
+            Commit message: ${{ github.event.head_commit.message }}
+          document: build/app/outputs/apk/release/app-arm64-v8a-debug.apk
