--- a/.github/workflows/prchecker.yml
+++ b/.github/workflows/prchecker.yml
@@ -75,6 +75,5 @@ jobs:
           format: markdown
           disable_web_page_preview: true
           message: |
-            New PR raised to [${{ github.event.repository.name }}](${{ github.event.repository.html_url }}) by [${{ github.event.head_commit.author.name }}](${{ github.event.head_commit.author.html_url }}).
-            Commit message: ${{ github.event.head_commit.message }}
+            New PR raised to [${{ github.event.repository.name }}](${{ github.event.repository.html_url }}) by [${{ github.event.sender.name }}](${{ github.event.sender.html_url }}).
           document: build/app/outputs/apk/release/app-arm64-v8a-debug.apk
