--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -82,7 +82,7 @@ jobs:
           message: |
             New commit pushed to [${{ github.event.repository.name }}](${{ github.event.repository.html_url }}) by [${{ github.event.head_commit.author.name }}](${{ github.event.head_commit.author.html_url }}).
             Commit message: ${{ github.event.head_commit.message }}
-          document: build/app/outputs/apk/release/app-arm64-v8a-release.apk
+          document: build/app/outputs/apk/release/app-arm64-v8a-release.apk, build/app/outputs/apk/release/app-armeabi-v7a-release.apk
 
       - name: Report failure on Telegram
         uses: appleboy/telegram-action@master
