--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,6 +70,9 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 flutter {
