--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,7 @@ android {
         versionName flutterVersionName
     }
 
+    // remove signingConfigs when running debug version
     signingConfigs {
         release {
             storeFile file(keystoreProperties['storeFile'])
@@ -58,9 +59,10 @@ android {
     }
 
     buildTypes {
+        // replace release with "debug" when running on debug version
         release {
             // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // replace with "debug" when running on debug version
             signingConfig signingConfigs.release
             shrinkResources false
         }
