added support for Android Auto  (#582)
* adding xml file for android auto support

* Update AndroidManifest.xml to include android auto support

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:label="BlackHole"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true">
+        
+        <meta-data
+            android:name="com.google.android.gms.car.application"
+            android:resource="@xml/automotive_app_desc" />
+        
         <receiver
             android:name=".BlackHoleMusicWidget"
             android:exported="false">
