Added synced lyrics

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ publish_to: "none"
 version: 1.15.7+38
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=2.18.0 <4.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   app_links: 2.2.2
@@ -31,7 +32,7 @@ dependencies:
   # flutter_downloader: ^1.7.1
   flutter_localizations:
     sdk: flutter
-  # flutter_lyric: ^2.0.4+6
+  flutter_lyric: ^2.0.4+6
   get_it: ^7.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
