--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,20 +11,20 @@ environment:
   flutter: ">=3.0.0"
 
 dependencies:
-  app_links: ^3.4.3
-  audio_service: ^0.18.10
+  app_links: ^3.4.5
+  audio_service: ^0.18.12
   audiotagger:
     git:
       url: https://github.com/Sangwan5688/Audiotagger
       ref: 90f2db5
   # bitsdojo_window: ^0.1.1+1 #For Desktops
-  cached_network_image: ^3.2.3
+  cached_network_image: ^3.3.0
   carousel_slider: ^4.2.1
   connectivity_plus: ^4.0.2
-  cupertino_icons: ^1.0.5
+  cupertino_icons: ^1.0.6
   dart_des: ^1.0.2
   device_info_plus: ^9.0.2
-  file_picker: ^5.3.2
+  file_picker: ^5.5.0
   flip_card: ^0.7.0
   flutter:
     sdk: flutter
@@ -34,23 +34,23 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_lyric: ^2.0.4+6
-  get_it: ^7.6.0
+  get_it: ^7.6.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   home_widget: ^0.3.0
   html_unescape: ^2.0.0
-  just_audio: ^0.9.34
+  just_audio: ^0.9.35
   # Discontinued, Use just_audio_windows instead.
   # just_audio_libwinmedia: ^0.0.4 # For windows and linux.
   logging: ^1.2.0
   marquee: ^2.2.3
   material_design_icons_flutter: 5.0.5955-rc.1
-  metadata_god: ^0.5.0
+  metadata_god: ^0.5.2+1
   on_audio_query: ^2.9.0
   package_info_plus: ^4.0.2
-  palette_generator: ^0.3.3+2
-  path_provider: ^2.0.15
-  permission_handler: ^10.3.0
+  palette_generator: ^0.3.3+3
+  path_provider: ^2.1.1
+  permission_handler: ^11.0.1
   persistent_bottom_nav_bar:
     git:
       url: https://github.com/Sangwan5688/PersistentBottomNavBar
@@ -59,7 +59,7 @@ dependencies:
   share_plus: ^7.0.2
   sizer: ^2.0.15
   sliding_up_panel: ^2.0.0+1
-  url_launcher: ^6.1.12
+  url_launcher: ^6.1.14
   uuid: ^3.0.7
   workmanager: ^0.5.1
   youtube_explode_dart: ^2.0.2
@@ -68,7 +68,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^2.1.2
-  msix: ^3.14.2
+  msix: ^3.16.4
 
 flutter:
   uses-material-design: true
